<resources>
    <string name="app_name">Mensajero</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Mensajero</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">Iniciar Sesión</string>
    <string name="transporter">Transportador</string>
    <string name="regalosquehablan_url">regalosquehablan.com</string>
    <string name="title_activity_maps">Mapa</string>
    <string name="connecting_with_google">Conectando con Google...</string>
    <string name="msg_incorrect_login">Los datos de usuario y contraseña no son correctos.</string>
    <string name="msg_network_error">Ocurrio un error durante la conexión.</string>
    <string name="title_activity_navigation">NavigationActivity</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tag">RUTA</string>
    <string name="orders">pedidos</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="title_activity_delivery">DeliveryActivity</string>
    <string name="notif_title_track">Tracking is running</string>
    <string name="notif_track_on">The tracking process is running</string>
    <string name="title_activity_test_finger_paint">TestFingerPaintActivity</string>
    <string name="hint_delivery_message">Observación de entrega</string>
    <string name="clear">Borrar</string>
    <string name="hint_customer_signature">Firma aquí</string>
    <string name="send_info">Enviando información</string>
    <string name="person_receiving">Persona que recibe</string>
    <string name="delivery_details">Detalles de la entrega</string>
    <string name="accept">Aceptar</string>
    <string name="send_confirmation">Confirmación de envío</string>
    <string name="send_delivery_confirmation">¿Estas seguro que deseas enviar la información de esta entrega?</string>
    <string name="cancel">Cancelar</string>
    <string name="plase_wait">Espera mientras guardamos tu información</string>
    <string name="msg_google_play_services_is_not_avalaible">Debes tener Google Play Services habilitado, para poder iniciar sesión.</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="report_case">Reportar una novedad</string>
    <string name="my_routes">Mis Rutas</string>
    <string name="confirm_start_delivery">Comenzar entrega</string>
    <string name="msg_confirm_start_delivery">Luego de empezar la entrega de este pedido, NO podrá abandonar la app hasta completarlo. ¿Estas seguro de empezar la entrega? </string>
    <string name="prompt_cc">Cédula</string>
    <string name="route">Ruta</string>
    <string name="msg_confirm_logout">¿Deseas cerrar tu sesión dentro de la aplicación?</string>
    <string name="msg_service_unavailable">Hubo un error al intentar conectarse con el servicio de entregas.</string>
    <string name="error">Error</string>
    <string name="info">INFO</string>
    <string name="start">INICIAR</string>


    <string-array name="delivery_states">
        <item>Exitosa</item>
        <item>Portería</item>
        <item>Persona Diferente</item>
        <item>Imposible</item>
    </string-array>

</resources>
