<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout_action"
            android:icon="@android:drawable/ic_lock_idle_lock"
            android:title="@string/logout" />

        <item
            android:id="@+id/nav_report_action"
            android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/report_case" />

        <item
            android:id="@+id/nav_route_action"
            android:icon="@drawable/ic_local_shipping_24dp"
            android:title="@string/my_routes" />

    </group>

  <!--  <item android:title="Communicate">
        <menu>
            <item android:id="@+id/nav_share" android:icon="@android:drawable/ic_menu_share"
                android:title="Share" />
            <item android:id="@+id/nav_send" android:icon="@android:drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

</menu>