<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/activity_delivery"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.acktos.regalosquehablan.transporter.presentation.DeliveryActivity">

    <ImageView
        android:id="@+id/img_gift_testimony"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:scaleType="centerCrop"
        android:src="@drawable/photo_placeholder" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                card_view:cardCornerRadius="4dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="16dp">

                <RelativeLayout
                    android:id="@+id/content_finger_paint"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/btn_clear_finger_paint"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:text="@string/clear"
                        android:textColor="@color/colorPrimaryDark"
                        style="@style/Widget.AppCompat.Button.Borderless"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorDivider"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="5dp"
                        android:text="@string/hint_customer_signature"/>

                </RelativeLayout>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_delivery_details"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingBottom="16dp"
                    android:paddingTop="16dp"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    android:weightSum="5">

                    <TextView
                        android:layout_weight="4"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:text="@string/delivery_details" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_chevron_right_24dp"
                        android:tint="@color/colorPrimary"/>


                </LinearLayout>

            </android.support.v7.widget.CardView>


        </LinearLayout>

    </ScrollView>

</LinearLayout>



